--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
   margin: auto;
   width: 95%;
 }
+.azeret-font {
+  font-family: "Azeret Mono", monospace;
+}
 .btn {
   font-size: 20px;
   font-weight: 600;
@@ -133,4 +136,27 @@ body {
 .development-image img {
   width: 100%;
   object-fit: cover;
+}
+
+/* Inspiration section style */
+.inspiration-container {
+  width: 70%;
+  text-align: center;
+  margin-bottom: 100px;
+}
+.inspiration-content {
+  padding: 0 10%;
+  margin-bottom: 48px;
+}
+.inspiration-video {
+  width: 100%;
+  height: 100%;
+  padding: 32px;
+  border: 1px solid #0d132133;
+  border-radius: 16px;
+}
+.inspiration-video iframe {
+  width: 100%;
+  height: 620px;
+  border-radius: 16px;
 }
