--- a/style.css
+++ b/style.css
@@ -39,10 +39,7 @@
   font-weight: 400;
   color: #0d13218f;
 }
-.anchor-default {
-  text-decoration: none;
-  color: black;
-}
+
 
 /* Body style */
 body {
@@ -147,6 +144,9 @@ body {
 /* Inspiration section style */
 .inspiration-container {
   width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   margin-bottom: 100px;
 }
