--- a/responsive.css
+++ b/responsive.css
@@ -63,7 +63,7 @@
     width: 40%;
   }
   .inspiration-content p {
-    font-size: 15px;
+    font-size: 14px;
   }
   .inspiration-video {
     width: 90%;
@@ -91,4 +91,76 @@
 
 /* Small device up to 640px*/
 @media screen and (max-width: 640px) {
+  .container {
+    width: 90%;
+  }
+  .btn {
+    font-size: 14px;
+    padding: 12px 16px;
+  }
+  .title {
+    font-size: 22px;
+  }
+  .description {
+    font-size: 14px;
+  }
+  .nav-container {
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 5px;
+  }
+  .nav-container h1 {
+    font-size: 38px;
+  }
+
+  .card-container {
+    flex-direction: column;
+    margin: auto 15px;
+  }
+  .hero {
+    padding: 30px 10px;
+  }
+  .hero-container h1 {
+    font-size: 22px;
+  }
+  .hero-container p {
+    font-size: 14px;
+  }
+  .development {
+    width: 90%;
+  }
+  .development-content-container {
+    padding: 30px 15px;
+  }
+  .development-image {
+    width: 70%;
+    padding: 10px;
+  }
+  .development-content h2 {
+    font-size: 22px;
+  }
+  .development-content p {
+    padding: 0 10px;
+    font-size: 14px;
+  }
+  .inspiration-video {
+    width: 100%;
+    padding: 10px;
+  }
+  .inspiration-video iframe {
+    height: 280px;
+  }
+  .inspiration-content {
+    padding: 0 2%;
+    margin-bottom: 35px;
+  }
+  .target-container p {
+    padding: 0 2%;
+  }
+  .footer-container {
+    flex-direction: column;
+    padding: 15px 10px;
+    gap: 20px;
+    text-align: center;
+  }
 }
