--- a/style.css
+++ b/style.css
@@ -49,8 +49,11 @@ body {
 
 /* Navbar style */
 .navbar {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.733);
+  backdrop-filter: blur(10px);
   border-bottom: 1px solid #b8e7fa;
+  position: sticky;
+  top: 0;
 }
 
 .nav-container {
